--- a/css/dom.css
+++ b/css/dom.css
@@ -4,6 +4,7 @@
 
 body{
     margin:0;
+    background-color: rgba(229, 227, 255, 0.63) !important;
 }
 
 .calcs{
@@ -120,4 +121,71 @@ body{
     border-radius: 7px;
     background-color: #f443363a;
     color: red;
+}
+
+.myforms{
+    position: relative;
+    min-height: 323px;
+}
+
+.myforms form{
+    background-color: #fff;
+     width: 50%;
+     position: absolute;
+     transition: all .5s;
+}
+
+.overley{
+    position: absolute;
+    right: 0;
+    z-index: 777;
+    background-color: red;
+    color: #fff;
+    height: 100%;
+    flex-wrap: wrap;
+    width: 50%;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    transition: all .5s;
+}
+
+.myforms.slider .overley{
+   transform: translateX(-100%);
+}
+
+.myforms.slider form{
+    transform: translateX(100%);
+ 
+ }
+
+.myforms.slider .reg{
+ 
+    z-index: 1;
+ }
+
+ .flexss{
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid #d5dcff;
+    padding: 10px;
+    border-radius: 20px;
+ }
+
+.flexss input{
+    border: 0;
+    outline: 0;
+}
+
+.mytag{
+    border-radius: 50px;
+    padding: 7px 22px;
+    margin: 5px;
+    border: 1px solid #3f51b5;
+    display: inline-block;
+}
+
+.mytag i{
+  cursor: pointer;
+  color: red;
 }
