--- a/css/dom.css
+++ b/css/dom.css
@@ -211,3 +211,35 @@ color: #3f51b5;
 }
 
  
+.typing .text{
+    position: relative;
+    height: 23px;
+    width: 100%;
+    display: inline-flex;
+}
+
+.typing .text::after{
+ content: "";
+ width: 1px;
+ height: 100%;
+ margin-left: 7px;
+background-color: #28465e;
+position: relative;
+display: inline-block;
+animation-name: type;
+animation-duration: .5s;
+animation-iteration-count: infinite;
+
+}
+
+@keyframes type {
+    
+    0%{
+    opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+
+}
