--- a/css/modalslide.css
+++ b/css/modalslide.css
@@ -81,3 +81,49 @@ body.modaled::before{
 .arr.next{
     right: 45px;
   }
+
+.contents{
+    display: none;
+}
+
+.contents.active{
+ display: block;
+}
+
+.contents img{
+    max-width: 100%;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    height: 450px;
+    box-shadow: 8px 7px 7px rgba(114, 92, 92, 0.287);
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+ 
